实现了新闻点击和刷新 初步完成收藏和历史页面

--- a/ZhouXuanBai_News/app/src/main/res/values/strings.xml
+++ b/ZhouXuanBai_News/app/src/main/res/values/strings.xml
@@ -14,5 +14,5 @@
     <string name="menu_collection">收藏</string>
     <string name="menu_shield">屏蔽</string>
     <string name="menu_night">夜间模式</string>
-    <string name="menu_send">Send</string>
+    <string name="menu_history">浏览历史</string>
 </resources>
